--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tester</title>
+    <title>Adventure Frontend</title>
 </head>
 <body>
-test
+<h1>Frontend test</h1>
 </body>
 </html>
