--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,10 @@
 <script>
     fetch("http://54.234.57.19:8085/activities")
         .then(response => response.json())
-        .then(data => console.log(data));
+        .then(data => {
+            const actMap = data.map(tbl => tbl.data)
+            console.log(actMap)})
+
 </script>
 </body>
 </html>
