--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                     newRow.appendChild(newCell);
                 });
             } else {
-                newCell = document.createElement("td");
+                const newCell = document.createElement("td");
                 newCell.textContent = row;
                 newRow.appendChild(newCell);
             }})}
