--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Activities</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-
+<div style="max-width: 1140px;margin:0 auto">
 <table class="table table-bordered table-sm" id="tbl">
     <thead>
     <tr>
@@ -19,6 +21,9 @@
     <tbody style="text-align: center">
     </tbody>
 </table>
+
+
+</div>
 <script>
     fetch("http://54.234.57.19:8085/activities")
         .then(response => response.json())
