--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Activities</title>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <table class="table table-bordered table-sm" id="tbl">
@@ -23,21 +24,19 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-    $( document ).ready(function() {
+    $(document).ready(function () {
         $.ajax({
             url: "http://54.234.57.19:8085/activities",
-            success: function( result ) {
+            success: function (result) {
                 console.log(result);
                 let tableContent = "";
-                $.each( result, function( key, value ) {
+                $.each(result, function (key, value) {
                     tableContent += "<tr><td>" + value["actId"] + "</td><td>" + value["actName"] + "</td><td>" + value["actDescription"] + "</td><td>" + value["employeeId"] + "</td></tr>";
                 });
-                $('tbody').html(tableContent)
-
+                $('#tbl tbody').html(tableContent)
             }
         });
     });
 </script>
 </body>
 </html>
-
