--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -51,10 +51,15 @@
         console.log("query:" + querySelector, "url:" + url)
     }
 
-    redirect("#index", "http://54.234.57.19:8090/")
-    redirect("#activities", "http://54.234.57.19:8090/activities")
-    redirect("#booking", "http://54.234.57.19:8090/booking")
-    redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
+    redirect("#index", "http://localhost:8090/")
+    redirect("#activities", "http://localhost:8090/activities")
+    redirect("#booking", "http://localhost:8090/booking")
+    redirect("#new-booking", "http://localhost:8090/booking/new")
+
+    // redirect("#index", "http://54.234.57.19:8090/")
+    // redirect("#activities", "http://54.234.57.19:8090/activities")
+    // redirect("#booking", "http://54.234.57.19:8090/booking")
+    // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
 </script>
 </body>
 </html>
