--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <button id="booking" class="btn btn-info">Bookings</button>
 <button id="new-booking" class="btn btn-info">Book activity</button>
 
-<h1>Index</h1>
+<h1>Index TESETETSETT</h1>
 
 <script>
     function redirect(querySelector, url) {
@@ -24,10 +24,15 @@
     console.log("query:" + querySelector, "url:" + url)
         }
 
-    redirect("#index", "http://54.234.57.19:8090/")
-    redirect("#activities", "http://54.234.57.19:8090/activities")
-    redirect("#booking", "http://54.234.57.19:8090/booking")
-    redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
+    redirect("#index", "http://localhost:8090/")
+    redirect("#activities", "http://localhost:8090/activities")
+    redirect("#booking", "http://localhost:8090/booking")
+    redirect("#new-booking", "http://localhost:8090/booking/new")
+
+    // redirect("#index", "http://54.234.57.19:8090/")
+    // redirect("#activities", "http://54.234.57.19:8090/activities")
+    // redirect("#booking", "http://54.234.57.19:8090/booking")
+    // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
 </script>
 
 </body>
