--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -47,9 +47,7 @@
                 },
                 url: 'http://54.234.57.19:8085/newbooking',
                 success: function (data) {
-                    console.log("dataString fra form")
-                    console.log(dataString)
-                    console.log("success: function(data)")
+                    console.log(data['bookingId']['81'])
                     console.log(data)
                 },
 
@@ -70,10 +68,15 @@
         console.log("query:" + querySelector, "url:" + url)
     }
 
-    redirect("#index", "http://54.234.57.19:8090/")
-    redirect("#activities", "http://54.234.57.19:8090/activities")
-    redirect("#booking", "http://54.234.57.19:8090/booking")
-    redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
+    redirect("#index", "http://localhost:8090/")
+    redirect("#activities", "http://localhost:8090/activities")
+    redirect("#booking", "http://localhost:8090/booking")
+    redirect("#new-booking", "http://localhost:8090/booking/new")
+
+    // redirect("#index", "http://54.234.57.19:8090/")
+    // redirect("#activities", "http://54.234.57.19:8090/activities")
+    // redirect("#booking", "http://54.234.57.19:8090/booking")
+    // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
 </script>
 </body>
 </html>
