--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Activities</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Bootstrap for JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<button id="index" class="btn btn-info">Index</button>
-<button id="activities" class="btn btn-info">Activities</button>
-<button id="booking" class="btn btn-info">Bookings</button>
-<button id="new-booking" class="btn btn-info">Book activity</button>
 
-<table class="table table-bordered table-sm" id="tbl">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Activity</th>
-        <th>Description</th>
-        <th>Employee ID</th>
-    </tr>
-    </thead>
-    <tbody style="text-align: center">
-    </tbody>
-</table>
+<div th:insert="fragments/header :: header"></div>
+<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="fragments/jumbotron :: jumbotron"></div>
+
+<div class="container" id="main">
+    <div class="row">
+        <div class="col-md-10">
+            <div id="form-container">
+                <table class="table table-striped table-hover table-lg" id="tbl">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th>Activity</th>
+                        <th>Description</th>
+                        <th>Employee ID</th>
+                    </tr>
+                    </thead>
+                    <tbody style="text-align: left">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!--
+        <div class="col-md-2">
+            <div id="form-container">
+                <p><img src="images/members_grid_web.jpg" width="150%" height="auto" alt="members-picture">
+            </div>
+        </div>
+        -->
+
+    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
@@ -61,5 +86,7 @@
     // redirect("#booking", "http://54.234.57.19:8090/booking")
     // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
 </script>
+
+    <div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
