--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Planned Activities</title>
+    <title>Booking</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap for JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    -->
+
 </head>
 <body>
-<button id="index" class="btn btn-info">Index</button>
-<button id="activities" class="btn btn-info">Activities</button>
-<button id="booking" class="btn btn-info">Booking</button>
+
+<div th:insert="fragments/header :: header"></div>
+<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="fragments/jumbotron :: jumbotron"></div>
 
 
+<div class="container" id="main">
+    <div class="row">
+        <div class="col-md-12">
+            <div id="form-container">
+                <table class="table table-striped table-hover table-lg" id="tbl">
+                    <thead>
+                        <tr>
+                            <th scope="col">Booking ID</th>
+                            <th>Date</th>
+                            <th>Participants</th>
+                            <th>Activity ID</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Employee ID</th>
+                        </tr>
+                    </thead>
+                    <tbody style="text-align: left">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
-<table class="table table-bordered table-sm" id="tbl">
-    <thead>
-    <tr>
-        <th>Booking ID</th>
-        <th>Date</th>
-        <th>Participants</th>
-        <th>Activity ID</th>
-        <th>Activity name</th>
-        <th>Activity Desc</th>
-        <th>Employee ID</th>
-    </tr>
-    </thead>
-    <tbody style="text-align: center">
-    </tbody>
-</table>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
@@ -51,31 +77,9 @@
         });
     })
 </script>
-<script>
-    function redirect(querySelector, url) {
-        document.querySelector(querySelector)
-            .addEventListener('click', () => {
-                window.location.href = url
-            })
-        console.log("query:" + querySelector, "url:" + url)
-    }
 
-    redirect("#index", "http://localhost:8090/")
-    redirect("#activities", "http://localhost:8090/activities")
-    redirect("#booking", "http://localhost:8090/booking")
-    redirect("#new-booking", "http://localhost:8090/booking/new")
 
-    // redirect("#index", "http://54.234.57.19:8090/")
-    // redirect("#activities", "http://54.234.57.19:8090/activities")
-    // redirect("#booking", "http://54.234.57.19:8090/booking")
-    // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
 
