--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Activities</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Bootstrap for JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+    <title>Home</title>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<button id="index" class="btn btn-info">Index</button>
-<button id="activities" class="btn btn-info">Activities</button>
-<button id="booking" class="btn btn-info">Bookings</button>
-<button id="new-booking" class="btn btn-info">Book activity</button>
 
-<h1>Index TESETETSETT</h1>
+<div th:insert="fragments/header :: header"></div>
+<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="fragments/jumbotron :: jumbotron"></div>
 
-<script>
-    function redirect(querySelector, url) {
-    document.querySelector(querySelector)
-        .addEventListener('click', () => {
-            window.location.href = url
-        })
-    console.log("query:" + querySelector, "url:" + url)
+<h1>Welcome</h1>
+
+<!--
+    <button id="index" class="btn btn-info">Index</button>
+    <button id="activities" class="btn btn-info">Activities</button>
+    <button id="booking" class="btn btn-info">Bookings</button>
+    <button id="new-booking" class="btn btn-info">Book activity</button>
+
+    <script>
+        function redirect(querySelector, url) {
+            document.querySelector(querySelector)
+                .addEventListener('click', () => {
+                    window.location.href = url
+                })
+            console.log("query:" + querySelector, "url:" + url)
         }
 
-    redirect("#index", "http://localhost:8090/")
-    redirect("#activities", "http://localhost:8090/activities")
-    redirect("#booking", "http://localhost:8090/booking")
-    redirect("#new-booking", "http://localhost:8090/booking/new")
+        redirect("#index", "http://localhost:8090/")
+        redirect("#activities", "http://localhost:8090/activities")
+        redirect("#booking", "http://localhost:8090/booking")
+        redirect("#new-booking", "http://localhost:8090/booking/new")
 
-    // redirect("#index", "http://54.234.57.19:8090/")
-    // redirect("#activities", "http://54.234.57.19:8090/activities")
-    // redirect("#booking", "http://54.234.57.19:8090/booking")
-    // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
-</script>
+        // redirect("#index", "http://54.234.57.19:8090/")
+        // redirect("#activities", "http://54.234.57.19:8090/activities")
+        // redirect("#booking", "http://54.234.57.19:8090/booking")
+        // redirect("#new-booking", "http://54.234.57.19:8090/booking/new")
+    </script>
 
+    -->
+
+    <div th:insert="fragments/footer :: footer"></div>
 </body>
 
 </html>
