--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,23 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6{
-    color: #555555;
-    font-family: 'Courier Prime', serif;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
 }
 
 body{
     padding-top: 60px;
-    background-color: #ffccff;
-    font-family: 'Courier Prime', serif;
+    background-color: #b3d9b1;
+    background-image: url("images/bg_image_body.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    font-family: Arial, sans-serif;
     text-align: left;
-}
-
-::placeholder {
-    margin-left: 20px;
 }
 
 label {
@@ -26,23 +26,26 @@ label {
 }
 
 .jumbotron {
-    background-image: url(images/datingbanner.jpg);
+    background-image: url(images/adv_jumbotron.jpg);
     background-size: cover;
     padding-top: 5%;
     height: 100%;
     padding-bottom: 17%;
-    background-color: #ffccff;
+    background-color: #0a850b;
 }
 
+.page-footer {
+    background-color: #b3d9b1;
+}
 .btn{
     color: #333333;
-    background-color: #eeeeee;
-    border-color: #333333;
+    background-color: #0a850b;
+    border-color: #ffffff;
     margin-top: 5px;
 }
 
 .btn:hover{
-    background-color: #ff0099;
+    background-color: #b3d9b1;
     border-color: #333333;
 }
 
@@ -56,20 +59,20 @@ label {
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    background-color: #ff0099; !important;
+    background-color: #0a850b; !important;
     color: #FFFFFF; !important;
-    font-family: 'Courier Prime', serif; !important;
+    font-family: Arial, sans-serif; !important;
 }
 
 .navbar {
-    background-color: #ffccff;
+    background-color: #b3d9b1;
     color: #FFFFFF; !important;
-    font-family: 'Courier Prime', serif; !important;
+    font-family: Arial, sans-serif; !important;
 }
 
 .navbar .navbar-nav .dropdown-menu {
-    background-color: #ffccff;
-    border-color: #ff0099;
+    background-color: #b3d9b1;
+    border-color: #333333;
 }
 
 .navbar .navbar-nav .dropdown-menu .dropdown-item {
@@ -78,17 +81,17 @@ label {
 .navbar .navbar-nav .dropdown-menu .dropdown-item:hover,
 .navbar .navbar-nav .dropdown-menu .dropdown-item:focus,
 .navbar .navbar-nav .dropdown-menu .dropdown-item.active {
-    color: #ffffff;
-    background-color: #ff0099;
+    color: #b3d9b1;
+    background-color: #0a850b;
 }
 .navbar .navbar-nav .dropdown-menu .dropdown-divider {
-    border-top-color: #ff0099;
+    border-top-color: #0a850b;
 }
 
 .grid {
-    border: 2px solid #ff0099;
+    border: 2px solid #0a850b;
     empty-cells: show;
-    background-color: #ffccff;
+    background-color: #b3d9b1;
     color: #555555;
     display: grid;
     grid-template-columns: repeat(auto-fill, 3fr);
@@ -99,7 +102,7 @@ label {
 .simple-text h1,
 .simple-text h2,
 .simple-text h3 {
-    color: #ff0099;
+    color: #ffffff;
 }
 
 .parag1 {
@@ -113,17 +116,17 @@ label {
 .parag2 {
     margin: 0%;
     padding: 10%;
-    background-color: #ff0099;
+    background-color: #b3d9b1;
     color: #333333;
     text-align: center;
 }
 
 a{
-    color: #ff0099;
+    color: #0a850b;
 }
 a:hover {
     color: #ffffff;
-    background-color: #ff0099;
+    background-color: #b3d9b1;
     text-decoration: none;
 }
 
@@ -183,7 +186,7 @@ input[type="file"] {
 
 .custom-file-upload:hover {
     color: #ffffff;
-    background-color: #ff0099;
+    background-color: #b3d9b1;
     text-decoration: none;
 
     -webkit-border-radius: 5px;
@@ -236,14 +239,14 @@ main {
         text-align: left;
         background-color: #f1f1f1;
         h1, h2, h3, h4, h5, h6 {
-            color: #ff0099;
+            color: #b3d9b1;
             font-family: 'Courier Prime', serif;}
 
         transition: transform 1s;
 
             .info {
                 padding: 0 4px;
-                color: #ff0099;
+                color: #b3d9b1;
             }
             .img {
                 width: 100%;
