--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <footer th:fragment="footer" class="page-footer font-small stylish-color-dark pt-4 mb-5">
-    <hr>
     <!-- Footer Links -->
     <div class="container text-center text-md-left">
 
@@ -15,16 +14,14 @@
                 <!-- Content -->
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact</h5>
                 <p>
-                    Guldbergsgade 123 <br>
-                    2233 Copenhagen <br>
-                    tlf. +45 12 34 56 78<br>
-                    mail:&nbsp<a href="mailto:info@catharsispark.com" >info@catharsispark.com</a><br>
-                    CVR: 12345678<br>
+                    Darwin Avenue 645 <br>
+                    CA 867452 SANTA MANUELA<br>
+                    tel. +000 12 34 56 78<br>
+                    mail:&nbsp<a href="mailto:info@catharsispark.com">info@catharsispark.com</a><br>
+                    REG.PRO. 12345678<br>
                 </p>
 
             </div>
-
-            <hr class="clearfix w-100 d-md-none">
 
             <!-- Grid column -->
             <div class="col-md-4 mx-auto">
@@ -49,11 +46,10 @@
                 </ul>
             </div>
 
-            <hr class="clearfix w-100 d-md-none">
 
             <!-- Grid column -->
             <div class="col-md-4 mx-auto">
-                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Visit us om social medias</h5>
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Visit us on social medias</h5>
                 <div>
                     <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"> </i></a>
                     <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"> </i></a>
@@ -66,8 +62,7 @@
     </div>
 
     <!-- Copyright -->
-    <hr>
-    <div class="footer-copyright text-center py-3"><small class="text-muted">© 2020 copyright for their respective authors |&nbsp
+    <div class="footer-copyright text-center py-3"><small class="text-muted">© 2021 copyright for their respective authors |&nbsp
     </small><a href="https://www.catharsispark.com/"><small class="text-muted">catharsispark.com</small></a>
     </div>
     <!-- Copyright -->
