--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<nav th:fragment="menu" class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #ffccff;">
-    <a class="navbar-brand" href="/"><img src="images/dating_app_logo_600px.png" width="50px" height="auto"></a>
+<nav th:fragment="menu" class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #b3d9b1;">
+    <a class="navbar-brand" href="/"><img src="images/adv_logo_02.png" width="50px" height="auto"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
