--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -71,7 +71,8 @@
                     'Accept': 'application/json',
                     'Content-type': 'application/json'
                 },
-                url: 'http://54.234.57.19:8085/newbooking',
+                // url: 'http://54.234.57.19:8085/newbooking',
+                url: 'http://localhost:8085/newbooking',
                 success: function (data) {
                     console.log(data['bookingId']['81'])
                     console.log(data)
