--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -17,11 +18,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    -->
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 
@@ -36,10 +33,9 @@
                 <table class="table table-striped table-hover table-lg" id="tbl">
                     <thead>
                         <tr>
-                            <th scope="col">Booking ID</th>
+                            <th>Booking ID</th>
                             <th>Date</th>
                             <th>Participants</th>
-                            <th>Activity ID</th>
                             <th>Name</th>
                             <th>Description</th>
                             <th>Employee ID</th>
@@ -65,7 +61,7 @@
                     tableRows +=
                         "<td>" + val["bookingId"] + "</td><td>" + val["bookingDate"] +
                         "</td><td>" + val["participantCount"] + "</td>" +
-                        "<td>" + val["activity"]["actId"] + "</td><td>" + val["activity"]["actName"] +
+                        "<td>"  + val["activity"]["actName"] +
                         "</td><td>" + val["activity"]["actDescription"] +
                         "</td><td>" + val["activity"]["employeeId"] + "</td>";
 
@@ -76,7 +72,16 @@
         });
     })
 </script>
+<script>
+    function redirect(querySelector, url) {
+        document.querySelector(querySelector)
+            .addEventListener('click', () => {
+                window.location.href = url
+            })
+        console.log("query:" + querySelector, "url:" + url)
+    }
 
+</script>
     <div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
