--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,10 +24,10 @@
                     <form id="login-form">
                         <fieldset>
                             <div class="form-group">
-                                <input type="text" name="username" id="username-field" class="form-control" placeholder="Username"  >
+                                <input type="text" name="username" id="username-field" class="form-control" placeholder="Username">
                             </div>
                             <div class="form-group">
-                                <input type="password" name="password" id="password-field" class="form-control" placeholder="Password"  >
+                                <input type="password" name="password" id="password-field" class="form-control" placeholder="Password">
                             </div>
                             <input type="submit" id="login-form-submit" value="Login" class="btn btn-success" >
                         </fieldset>
@@ -48,7 +48,7 @@
         const password = loginForm.password.value;
 
         if (username === "user" && password === "pass") {
-            location.href='index.html'
+            location.href='/'
         } else {
             alert("Wrong username and/or password");
         }
