--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -39,6 +39,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/booking/new">New Booking</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
             <!--
                         <li class="nav-item">
                             <a class="nav-link" href="/contactForm">Admin</a>
