--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,8 +23,6 @@
 <div th:insert="fragments/menu :: menu"></div>
 <div th:insert="fragments/jumbotron :: jumbotron"></div>
 
-<h1>Welcome</h1>
-
     <!-- Indsæt indhold her -->
     <div class="row">
 
@@ -67,8 +65,8 @@
             </div>
         </div>
     </div>
-</div> <!-- /container -->
-<br>
+
+    <div th:insert="fragments/footer :: footer"></div>
 </body>
 
 </html>
