--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:color="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -29,12 +29,12 @@
                 <table class="table table-striped table-hover table-lg" id="tbl">
                     <thead>
                     <tr>
-                        <th>Activity</th>
-                        <th>Description</th>
-                        <th>Employee ID</th>
+                        <th scope="col">Activity</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Employee ID</th>
                     </tr>
                     </thead>
-                    <tbody style="text-align: left">
+                    <tbody style="text-align: left; color:#ffffff">
                     </tbody>
                 </table>
             </div>
