--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -18,7 +17,11 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    -->
+
 </head>
 <body>
 
@@ -33,12 +36,13 @@
                 <table class="table table-striped table-hover table-lg" id="tbl">
                     <thead>
                         <tr>
-                            <th>Booking ID</th>
-                            <th>Date</th>
-                            <th>Participants</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Employee ID</th>
+                            <th scope="col">Booking ID</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Participants</th>
+                            <th scope="col">Activity ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Employee ID</th>
                         </tr>
                     </thead>
                     <tbody style="text-align: left">
@@ -82,6 +86,7 @@
     }
 
 </script>
+
     <div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
