--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:align="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -13,13 +13,15 @@
 
 <body>
 
-<div class="container" style="width: 50%; padding-top: 10%">
+<div th:insert="fragments/header :: header"></div>
+<div th:insert="fragments/menu :: menu"></div>
+<div th:insert="fragments/jumbotron :: jumbotron"></div>
+
+<div class="container" id="main">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
+        <div class="col-md-4">
+            <div id="form-container">
                     <h3 class="panel-title">Please sign in</h3>
-                </div>
                 <div class="panel-body">
                     <form id="login-form">
                         <fieldset>
@@ -37,6 +39,11 @@
         </div>
     </div>
 </div>
+
+<br><br>
+
+<div th:insert="fragments/footer :: footer"></div>
+
 </body>
 <script>
     const loginForm = document.getElementById("login-form");
