--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -45,7 +45,7 @@
                             <th scope="col">Employee ID</th>
                         </tr>
                     </thead>
-                    <tbody style="text-align: left">
+                    <tbody style="text-align: left; color:#ffffff">
                     </tbody>
                 </table>
             </div>
