--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -20,10 +20,6 @@ body{
     text-align: left;
 }
 
-table {
-    color:#ffffff;
-}
-
 label {
     display: block;
     margin-bottom: 30px;
@@ -41,6 +37,11 @@ label {
 .page-footer {
     background-color: #b3d9b1;
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+    background-color: white;
+}
+
 .btn{
     color: #333333;
     background-color: #0a850b;
@@ -50,7 +51,7 @@ label {
 
 .btn:hover{
     background-color: #b3d9b1;
-    border-color: #333333;
+    border-color: #b3d9b1;
 }
 
 .bd-placeholder-img {
@@ -96,7 +97,7 @@ label {
     border: 2px solid #0a850b;
     empty-cells: show;
     background-color: #b3d9b1;
-    color: #555555;
+    color: #ffffff;
     display: grid;
     grid-template-columns: repeat(auto-fill, 3fr);
     width: 5fr;
@@ -113,7 +114,7 @@ label {
     margin: 0%;
     padding: 10%;
     background-color: #eeeeee;
-    color: #333333;
+    color: #ffffff;
     text-align: left;
 }
 
@@ -121,7 +122,7 @@ label {
     margin: 0%;
     padding: 10%;
     background-color: #b3d9b1;
-    color: #333333;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -180,7 +181,7 @@ input[type="file"] {
     padding: 6px 12px;
     cursor: pointer;
 
-    color: #333333;
+    color: #ffffff;
     background-color: #eeeeee;
     margin-top: 5px;
     border-radius: 5px;
