--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:color="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:color="http://www.w3.org/1999/xhtml"
+      xmlns:hover="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -28,13 +29,13 @@
             <div id="form-container">
                 <table class="table table-striped table-hover table-lg" id="tbl">
                     <thead>
-                    <tr>
+                    <tr style="color:white">
                         <th scope="col">Activity</th>
                         <th scope="col">Description</th>
                         <th scope="col">Employee ID</th>
                     </tr>
                     </thead>
-                    <tbody style="text-align: left; color:#ffffff">
+                    <tbody style="text-align: left; color:white">
                     </tbody>
                 </table>
             </div>
