--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -35,7 +35,7 @@
             <div id="form-container">
                 <table class="table table-striped table-hover table-lg" id="tbl">
                     <thead>
-                        <tr>
+                        <tr style="color:white">
                             <th scope="col">Booking ID</th>
                             <th scope="col">Date</th>
                             <th scope="col">Participants</th>
