--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -113,8 +113,8 @@ label {
 .parag1 {
     margin: 0%;
     padding: 10%;
-    background-color: #eeeeee;
-    color: #ffffff;
+    background-color: #b3d9b1;
+    color: #000000;
     text-align: left;
 }
 
@@ -122,7 +122,7 @@ label {
     margin: 0%;
     padding: 10%;
     background-color: #b3d9b1;
-    color: #ffffff;
+    color: #000000;
     text-align: center;
 }
 
