--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -20,7 +20,7 @@
 
         <div class="col-md-6">
 
-            <div class="simple-text"><h2>ABOUT US</h2>
+            <div class="simple-text"><h2><strong>ABOUT US</strong></h2>
                 <p class="parag1" title="">
                     Founded in 1999 by passionate athletes, who won numerous
                     awards and medals for their high-level performances, Magnus
@@ -46,7 +46,7 @@
 
         <div class="col-md-6">
             <div class="simple-text"><h2>&ensp;</h2>
-                <p class="parag2"><img src="images/members_photos/Member_02.jpg" width="102%" height="auto" alt="Zentai costume image">
+                <p class="parag2"><img src="../images/adv_bg_image_green.jpg" width="100%" height="auto" alt="Zentai costume image">
                     <br><br></p>
             </div>
         </div>
