--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <div class="simple-text"><h2><strong>WELCOME!</strong></h2>
                 <p class="parag1" title="">
-                    Catharsis (from Greek κάθαρσις, katharsis, meaning "purification"
+                    <strong>Catharsis</strong> (from Greek κάθαρσις, katharsis, meaning "purification"
                     or "cleansing" or "clarification") is the purification and purgation
                     of emotions—particularly pity and fear—through art or any extreme
                     change in emotion that results in renewal and restoration. It is a
