activity og booking get metode virker

--- a/src/main/resources/templates/activities.html
+++ b/src/main/resources/templates/activities.html
@@ -32,7 +32,7 @@
                     <tr style="color:white">
                         <th scope="col">Activity</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Employee ID</th>
+                        <th scope="col">Employee Name</th>
                     </tr>
                     </thead>
                     <tbody style="text-align: left; color:white">
@@ -55,13 +55,18 @@
 <script>
     $(document).ready(function () {
         $.ajax({
-            url: "http://54.234.57.19:8085/activities",
+            url: "http://localhost:8085/activities",
             success: function (result) {
                 console.log(result);
                 let tableContent = "";
                 $.each(result, function (key, value) {
-                    tableContent += "<tr><td>" + value["actName"] + "</td><td>" + value["actDescription"] + "</td><td>" + value["employeeId"] + "</td></tr>";
+                    tableContent += "<tr>";
+                    tableContent +=
+                        "<td>" + value["actName"] +
+                        "</td><td>" + value["actDescription"] +
+                        "</td><td>" + value["employee"] + "</td>";
                 });
+                tableContent += "</tr>";
                 $('#tbl tbody').html(tableContent)
             }
         });
