--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" style="text-align: right" href="/login">Login</a>
             </li>
             <!--
                         <li class="nav-item">
