--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -6,15 +6,16 @@
     <meta charset="UTF-8">
     <title>New Booking</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- Bootstrap for JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<!--     Bootstrap for JS-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -32,9 +33,7 @@
                     <tbody>
                     <tr>
                         <td class="align-baseline">
-                            <label for="bookingId"></label>
-                            <input type="text" id="bookingId" placeholder="ID..."><br>
-                            <input type="text" id="bookingDate" placeholder="Date..."><br>
+                            <input type="date" id="bookingDate" placeholder="Date..."><br>
                             <input type="text" id="participants" placeholder="Participants..."><br>
                             <input type="number" id="activity" placeholder="Activity ID..."><br>
                             <button id="add-booking" class="btn btn-info">Add</button>
@@ -53,7 +52,6 @@
     $(function () {
         $('#add-booking').on('click', function () {
             let dataString = {
-                bookingId: $("#bookingId").val(),
                 bookingDate: $('#bookingDate').val(),
                 participantCount: $('#participants').val(),
                 activity: {
@@ -74,7 +72,6 @@
                 // url: 'http://54.234.57.19:8085/newbooking',
                 url: 'http://localhost:8085/newbooking',
                 success: function (data) {
-                    console.log(data['bookingId']['81'])
                     console.log(data)
                 },
 
