activity og booking get metode virker

--- a/src/main/resources/templates/newBooking.html
+++ b/src/main/resources/templates/newBooking.html
@@ -33,7 +33,7 @@
                     <tbody>
                     <tr>
                         <td class="align-baseline">
-                            <input type="date" id="bookingDate" placeholder="Date..."><br>
+                            <input type="datet" id="bookingDate" placeholder="Date..."><br>
                             <input type="text" id="participants" placeholder="Participants..."><br>
                             <input type="number" id="activity" placeholder="Activity ID..."><br>
                             <button id="add-booking" class="btn btn-info">Add</button>
